--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,6 +5,11 @@
   <body>
     <div id="main-container">
       <h1>TLDReddit</h1>
+      <div>
+        <button id="summarize-post-btn" class="summarize-btn">Post</button>
+        <button id="summarize-comments-btn" class="summarize-btn">Comments</button>
+      </div>
+      <p id="summary">choose what to summarize</p>
     </div>
     <script src="popup.js"></script>
   </body>
