--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,16 +1,21 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="popup.css">
-  </head>
-  <body>
-    <div id="main-container">
+
+<head>
+  <link rel="stylesheet" type="text/css" href="popup.css">
+</head>
+
+<body>
+  <div id="main-container">
+    <div id="toolbar">
       <h1>TLDReddit</h1>
       <div>
         <button id="summarize-post-btn" class="summarize-btn">Post</button>
         <button id="summarize-comments-btn" class="summarize-btn">Comments</button>
       </div>
-      <p id="summary">choose what to summarize</p>
     </div>
-    <script src="popup.js"></script>
-  </body>
+    <p id="summary">choose what to summarize</p>
+  </div>
+  <script src="popup.js"></script>
+</body>
+
 </html>
