--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,10 +10,10 @@
       <h1>TLDReddit</h1>
       <div>
         <button id="summarize-post-btn" class="summarize-btn">Post</button>
-        <button id="summarize-comments-btn" class="summarize-btn">Comments</button>
+        <button id="summarize-comments-btn" class="summarize-btn">Replies</button>
       </div>
     </div>
-    <p id="summary">choose what to summarize</p>
+    <p id="summary">Select "Post" to summarize the original post, or select "Replies" to summarize the replies.</p>
   </div>
   <script src="popup.js"></script>
 </body>
