allow API key reset

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,7 +20,7 @@
       <input type="text" id="api-key" name="api-key" placeholder="Enter your API key" />
     </div>
     <div>
-      <input type="button" id="api-key-sub-btn" value="Submit" />
+      <input type="button" id="api-key-sub-btn" value="Save" />
     </div>
   </div>
   <div id="main-container">
